# calendar-agent

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  skills-lock.json
.claude/: settings.json
.claude/agents/: code-reviewer.md  issue-tracker.md  test-runner.md
.claude/hooks/: auto-format.sh  pre-stop-check.sh  protect-tests.sh
.claude/plugins/sdlc/: plugin.json
.claude/plugins/sdlc/skills/capture/: SKILL.md
.claude/plugins/sdlc/skills/create/: SKILL.md
.claude/plugins/sdlc/skills/create/reference/: epic-execution.md  prd-execution.md  (+1 more)
.claude/plugins/sdlc/skills/define/: SKILL.md
.claude/plugins/sdlc/skills/reconcile/: SKILL.md
.claude/plugins/sdlc/skills/retro/: SKILL.md
.claude/plugins/sdlc/skills/status/: SKILL.md
.claude/plugins/sdlc/skills/update/: SKILL.md
.claude/rules/: backend.md  code-quality.md  frontend.md  git.md  infra.md  tdd.md  workflow.md
.claude/sdlc/pi/: PI.md
.claude/sdlc/prd/: PRD.md
.claude/skills/close-pi/: SKILL.md
.claude/skills/create-epic/: SKILL.md
.claude/skills/create-feature/: SKILL.md
.claude/skills/create-prd/: SKILL.md
.claude/skills/detail-story/: SKILL.md
.claude/skills/pick-task/: SKILL.md
.claude/skills/plan-increment/: SKILL.md
.claude/skills/review-coderabbit/: SKILL.md
.claude/skills/sync-issues/: SKILL.md
.claude/skills/update-decision/: SKILL.md
.claude/skills/update-epic/: SKILL.md
.claude/skills/update-feature/: SKILL.md
.claude/skills/update-pi/: SKILL.md
.claude/skills/update-prd/: SKILL.md
.claude/skills/update-story/: SKILL.md
.claude/specs/in-progress/: SPEC.md
.github/: CODEOWNERS
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  pyrightconfig.json
backend/app/: main.py
backend/app/agents/: calendar_agent.py  guardrails.py  prompts.py  router.py  state.py
backend/app/agents/tools/: calendar_tools.py  search_tools.py
backend/app/auth/: dependencies.py  google_credentials.py  router.py  schemas.py  service.py  token_storage.py
backend/app/context_ingestion/: service.py  sync.py  tasks.py
backend/app/core/: config.py  middleware.py  redis.py  startup.py
backend/app/search/: embeddings.py  index.py  service.py
backend/app/users/: router.py  schemas.py  service.py
backend/scripts/: entrypoint.sh
backend/tests/: conftest.py  test_agent.py  test_auth_router.py  test_calendar_tools.py  test_context_ingestion.py  test_embeddings.py  test_guardrails.py  test_health_probes.py  test_redis.py  test_scaffold.py  test_search.py  test_search_tools.py  test_token_storage.py  test_users.py
docs/: ARCHITECTURE.md  AUDIT-2026-03-17.md  CICD-PLAN.md  CLAUDE-CODE-INFRASTRUCTURE-GUIDE.md  HUMAN-WORKFLOW.md  SDLC-GUIDE.md  TRADEOFFS.md
docs/archive/: App Plan.md  Claude Code Optimization.md
docs/superpowers/plans/: 2026-03-17-sdlc-skill-suite.md  2026-03-19-sdlc-v2-plugin.md  2026-03-20-sdlc-v2-fixes-and-patterns.md
docs/superpowers/specs/: 2026-03-17-sdlc-skill-suite-design.md  2026-03-19-sdlc-v2-skill-suite-design.md  2026-03-20-sdlc-v2-fixes-and-patterns.md
frontend/: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  auth.ts  package.json  playwright.config.ts  pnpm-lock.yaml  proxy.ts  tsconfig.json
frontend/e2e/: screenshots.spec.mts
frontend/src/actions/: chat.ts  settings.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.test.tsx  page.tsx
frontend/src/app/(main)/: layout.tsx
frontend/src/app/(main)/calendar/: error.tsx  loading.tsx  page.tsx
frontend/src/app/(main)/chat/: error.tsx  page.tsx
frontend/src/app/(main)/settings/: page.tsx
frontend/src/app/api/chat/: route.test.ts  route.ts
frontend/src/components/calendar/: CalendarScopePrompt.tsx  CalendarShell.test.tsx  CalendarShell.tsx  CalendarSkeleton.tsx  CalendarToolbar.tsx  DayView.tsx  EventCard.test.tsx  EventCard.tsx  EventDetailDialog.tsx  TimeGrid.tsx  WeekView.tsx
frontend/src/components/chat/: ChatInput.test.tsx  ChatInput.tsx  ChatMessage.test.tsx  ChatMessage.tsx  ChatShell.test.tsx  ChatShell.tsx  ChatThread.tsx  ConfirmationCard.test.tsx  ConfirmationCard.tsx  ScopeRequiredCard.test.tsx  ScopeRequiredCard.tsx
frontend/src/components/layout/: SidebarNav.tsx
frontend/src/components/settings/: DisconnectButton.test.tsx  DisconnectButton.tsx  PreferencesForm.test.tsx  PreferencesForm.tsx  ScopeManager.test.tsx  ScopeManager.tsx
frontend/src/hooks/: useCalendarEvents.test.ts  useCalendarEvents.ts  useChat.test.ts  useChat.ts
frontend/src/lib/: api.test.ts  api.ts  calendar.test.ts  calendar.ts  chat-stream.test.ts  chat-stream.ts  format-confirmation.test.ts  format-confirmation.ts  google-auth.test.ts  google-auth.ts  render-markdown.tsx  token-sync.test.ts  token-sync.ts
infra/environments/dev/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/modules/ai-services/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/container-apps/: main.tf  outputs.tf  variables.tf
infra/modules/key-vault/: main.tf  outputs.tf  variables.tf
infra/modules/networking/: main.tf  outputs.tf  variables.tf
infra/modules/redis/: main.tf  outputs.tf  variables.tf
(+8 files in other folders)
