[project]
name = "calendar-agent-backend"
version = "0.1.5"
description = "AI Calendar Assistant — FastAPI backend with LangGraph agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.135.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "langgraph==1.1.2",
    "langgraph-prebuilt==1.0.8",
    "langchain-core==1.2.19",
    "langchain-openai==1.1.11",
    "langchain-google-community[calendar]==3.0.5",
    "azure-search-documents==11.6.0",
    "azure-ai-contentsafety==1.0.0",
    "azure-identity==1.25.3",
    "redis[hiredis]==7.3.0",
    "slowapi==0.1.9",
    "asgi-correlation-id==4.3.4",
    "cryptography==46.0.5",
    "google-auth==2.49.1",
    "google-api-python-client==2.192.0",
    "cachecontrol==0.14.4",
    "requests==2.32.5",
    "openai==2.28.0",
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "ruff==0.15.6",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "mypy==1.19.1",
    "pyright==1.1.408",
    "types-requests==2.32.4.20260107",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:create_react_agent has been moved:DeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
exclude = ["\\.venv"]

# Libraries without py.typed
[[tool.mypy.overrides]]
module = ["slowapi.*", "googleapiclient.*", "langchain_google_community.*"]
ignore_missing_imports = true

# Tests: relax decorator strictness for pytest fixtures
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
